refactor: migrate VehicleController.java
